# ykc-2nd

./: .gitignore  README.md  pyproject.toml
data/: sample_submission.csv  test.csv  train.csv  train_with_label.csv
notebook/: adhoc.ipynb  starter copy.ipynb  starter.ipynb  submission.csv  view_baseline.ipynb  view_data.ipynb  view_time.ipynb  word_weight.ipynb
script/: save_pickle.py
