[tool.poetry]
name = "ykc-2nd"
version = "0.1.0"
description = "For ykc-2nd"
authors = ["fooqoo"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
numpy = "^1.19.0"
jupyter = "^1.0.0"
sklearn = "^0.0"
lightgbm = "^2.3.1"
tqdm = "^4.47.0"
gensim = "^3.8.3"
matplotlib = "^3.2.2"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
